--- a/styles/game.less
+++ b/styles/game.less
@@ -1,5 +1,8 @@
 body {
+    background-color: #1E708E;
+    font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
     margin: 0;
+    overflow: hidden;
     padding: 0;
 }
 
@@ -24,13 +27,6 @@ body {
 
 .ui-elements {
     width: auto;
-    /*position: absolute;
-    top: 0;*/
-//    -webkit-transform: translateZ(0);
-//    -moz-transform: translateZ(0);
-//    -ms-transform: translateZ(0);
-//    -o-transform: translateZ(0);
-    transform: translateZ(0);
 }
 
 .game {
